# sharkcnc

./: .gitignore  CMakeLists.txt  CMakePresets.json  PLAN.md  README.md
.github/workflows/: ci.yml
app/: CMakeLists.txt  cam_dialog.cpp  cam_dialog.h  cam_panel.cpp  cam_panel.h  gcode_view.cpp  gcode_view.h  gcode_view3d.cpp  gcode_view3d.h  machine_client.cpp  machine_client.h  main.cpp  main_window.cpp  main_window.h  probe_dialog.cpp  probe_dialog.h  tool_dialog.cpp  tool_dialog.h  tool_library.cpp  tool_library.h
core/: CMakeLists.txt
core/cam/: excellon.cpp  excellon.h  facing.cpp  facing.h  gcode_out.cpp  gcode_out.h  gerber.cpp  gerber.h  isolation.cpp  isolation.h  outline.cpp  outline.h  tool.cpp  tool.h
core/gcode/: parser.cpp  parser.h  resume.cpp  resume.h  warp.cpp  warp.h
core/heightmap/: heightmap.cpp  heightmap.h
core/machine/: grbl_driver.cpp  grbl_driver.h  simulator.cpp  simulator.h
core/transport/: serial_transport.cpp  tcp_transport.cpp  transport.h
docs/: HANDOFF.md
hardware/fluidnc-bob/: BOM.md  README.md  bob.kicad_sym  fluidnc-bob.kicad_pcb  fluidnc-bob.kicad_pro  fluidnc-bob.kicad_sch  fp-lib-table  sym-lib-table
hardware/fluidnc-bob/fluidnc-bob.pretty/: ESP32_DevKitC_38_Socket.kicad_mod  ESP32_S3_DevKit_44_Socket.kicad_mod  WirePads_1x02_P5.08mm.kicad_mod  WirePads_1x03_P5.08mm.kicad_mod  WirePads_1x06_P5.08mm.kicad_mod
hardware/fluidnc-bob/generate/: design.py  gen_fp.py  gen_pcb.py  gen_sch.py  verify_netlist.py
hardware/fluidnc-bob/gerbers/: fluidnc-bob-B_Cu.gbl  fluidnc-bob-B_Cu.gbr  fluidnc-bob-B_Mask.gbs  fluidnc-bob-B_Paste.gbp  fluidnc-bob-B_Silkscreen.gbo  fluidnc-bob-Edge_Cuts.gbr  fluidnc-bob-Edge_Cuts.gm1  fluidnc-bob-F_Cu.gtl  fluidnc-bob-F_Mask.gts  fluidnc-bob-F_Paste.gtp  fluidnc-bob-F_Silkscreen.gto  fluidnc-bob-In1_Cu.g1  fluidnc-bob-In1_Cu.gbr  fluidnc-bob-In2_Cu.g2  fluidnc-bob-In2_Cu.gbr  fluidnc-bob-NPTH-drl.gbr  fluidnc-bob-NPTH-drl_map.gbr  (+5 more)
tests/: CMakeLists.txt  test_cam.cpp  test_driver.cpp  test_gcode.cpp  test_heightmap.cpp
tests/fixtures/: board_pour_F_Cu.gbr  kicad_f_cu.gbr  kicad_pth.drl
tools/: CMakeLists.txt  scnc_send.cpp  scnc_sim.cpp  sharkcam.cpp
